--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Generative Music Classroom</title>
+    <title>AmbientDumke2</title>
   </head>
   <body>
-    <h1>Generative Music Classroom</h1>
+    <h1>AmbientDumke2</h1>
     <p>using <a id="version-link" href="" target="_blank"></a></p>
     <div id="controls-container">
       <audio
