--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>AmbientDumke2</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- LOAD Tone.js from unpkg -->
-		<script src="src/generator.js"></script>
+		<script src="https://github.com/Careycampbell/Ambient-Dumke2.git"></script>
 		<script>
 			// Don't remove this; you'll need it for every lesson!
 import * as Tone from 'tone';
